--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/input": "^2.2.5",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/select": "^2.2.7",
     "next": "^14.2.13",
