--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/select": "^2.2.7",
     "axios": "^1.7.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18"
